-- save data and music

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,27 @@ lib/
 addons/
 fonts/
 art/
+/Music/._theme-1.ogg
+/Music/._theme-2.ogg
+/Music/._theme-3.ogg
+/Music/._theme-4.ogg
+/Music/theme-1.ogg
+/Music/theme-1.ogg.import
+/Music/theme-2.ogg
+/Music/theme-2.ogg.import
+/Music/theme-3.ogg
+/Music/theme-3.ogg.import
+/Music/theme-4.ogg
+/Music/theme-4.ogg.import
+/Sounds/1.ogg
+/Sounds/1.ogg.import
+/Sounds/3.ogg
+/Sounds/3.ogg.import
+/Sounds/4.ogg
+/Sounds/4.ogg.import
+/Sounds/5.ogg
+/Sounds/5.ogg.import
+/Sounds/6.ogg
+/Sounds/6.ogg.import
+/Sounds/7.ogg
+/Sounds/7.ogg.import
